0.3.0
    removed unused directory.rename
    refactor edge.copyProperties into copyPropertiesTo to have similar semantics as Graph.copyTo
    calcWeight now contains reverse boolean to calculate correct direction dependent weight
    completely different web API response format. see docs/web
    swapDirections is renamed to reverseFlags (EncodingManager and FlagEncoders)
    edgeState.detach has now a reverse parameter, just use false to get previous results
    web api: buildDate contains now timezone, algoType is replaced with weighting
    dijkstraNative is now dijkstraNativebi
    fixed #151
    calcWeight now contains reverse boolean to calculate correct direction dependent weight
    EncodingManager always takes the encoders in constructor, to force always init
    GraphHopper.setMemory(true, true/false) was refactored to GraphHopper.setMemory(true/false), use mmap config via GraphHopper.setMemoryMapped()
    incompatible edges => you need to re-import data and/or update the edges file
    the instructions of the web response does not contain times (string) but instead millis (long)
    PrepareContractionHierarchies.setPeriodicUpdates is now in percentage not in absolute counts
    improved bike routing #132, #138, #139, #150
    gpx export via API, HTTP (route?type=gpx) and web interface is possible: #113, #136, #141   

0.2.0
23 Nov 2013

    change inconsistent default settings for contraction hierarchies in the API - see https://lists.openstreetmap.org/pipermail/graphhopper/2013-December/000585.html
    fixed issues with android:
        graphhopper: use maps from 0.2 path; updated maps
        mapsforge: use mapsforge-map dependency; merged #461; avoid duplicates otherwise mapsforge-core would be duplicate (?)
    refactored/renamed classes and methods:
        refactor 'flags' from int to long (still only int is stored)
        replacing Graph.edge(a,b,dist,flags) by Graph.edge(a,b).setDistance().setFlags()